--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
 <h2> News </h2>
 <p style="text-align:justify";>
 	<p style="text-align:justify";>
+		[May. 2025] 🔥 Got three papers accepted by <a href="https://2025.aclweb.org/" target="_blank">ACL 2025</a>! Welcome to have a chat in Vienna.
+	</p>
+	<p style="text-align:justify";>
 		[Feb. 2025] 🔥 Thrilled to be awarded the PolyU Postdoc Matching Fund.
 	</p>
 	<p style="text-align:justify";>
-		[Oct. 2024] 🔥 Will be working as a Postdoc at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
+		[Oct. 2024] &nbsp Will be working as a Postdoc at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
 	</p>
 	<p style="text-align:justify";>
 		[Sep. 2024] &nbsp Defended my PhD thesis. Huge thanks to my supervisor and committee members!
@@ -83,12 +86,12 @@
 	<p style="text-align:justify";>
 		[Jul. 2023] &nbsp Will be heading to Toronto for <a href="https://2023.aclweb.org/" target="_blank">ACL 2023</a>. The first time to attend an in-person academic conference during my PhD and to visit abroad during my life!
 	</p>
-	<p style="text-align:justify";>
+	<!-- <p style="text-align:justify";>
 		[May 2023] &nbsp Got two papers accepted as Findings of ACL 2023!
 	</p>
 	<p style="text-align:justify";>
 		[Apr. 2023] &nbsp Passed the confirmation of registration at PolyU. Officially became a PhD candidate!
-	</p>
+	</p> -->
 </p>
 
 
@@ -116,12 +119,12 @@
 <h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en" target="_blank">Google Scholar</a>) (*: Equal contribution; <sup>†</sup>: Corresponding author)</h4>
 </h2>
 
-<p> Preprint </p>
+<p> 2025 </p>
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Training Turn-by-Turn Verifiers for Dialogue Tutoring Agents: The Curious Case of LLMs as Your Coding Tutors</h3> 
 		<b>Jian Wang</b>, Yinpei Dai, Yichi Zhang, Ziqiao Ma, Wenjie Li, and Joyce Chai.<br>
-		<i>arXiv:2502.13311.</i> <br>
+		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2025</i> <br>
 		[<a href="https://arxiv.org/abs/2502.13311">arXiv</a>]
 		[<a href="https://github.com/iwangjian/Coding-Tutor">code</a>]
 	    </p>
@@ -129,15 +132,15 @@
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>STeCa: Step-level Trajectory Calibration for LLM Agent Learning</h3> 
 		Hanlin Wang, <b>Jian Wang</b><sup>†</sup>, Chak Tou Leong, and Wenjie Li.<br>
-		<i>arXiv:2502.14276.</i> <br>
+		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2025</i> <br>
 		[<a href="https://arxiv.org/abs/2502.14276">arXiv</a>]
 		[<a href="https://github.com/WangHanLinHenry/STeCa">code</a>]
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Why Safeguarded Ships Run Aground? Aligned Large Language Models' Safety Mechanisms Tend to Be Anchored in The Template Region</h3> 
-		Chak Tou Leong, Qingyu Yin, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li<sup>†</sup>.<br>
-		<i>arXiv:2502.13946.</i> <br>
+		Chak Tou Leong, Qingyu Yin, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li.<br>
+		<i>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025.</i> <br>
 		[<a href="https://arxiv.org/abs/2502.13946">arXiv</a>]
 	    </p>
 	</li>
@@ -147,7 +150,7 @@
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"></p>
 		<h3>E2CL: Exploration-based Error Correction Learning for Embodied Agents</h3> 
-		Hanlin Wang*, Chak Tou Leong*, <b>Jian Wang</b>, and Wenjie Li.  <br>
+		Hanlin Wang, Chak Tou Leong, <b>Jian Wang</b>, and Wenjie Li.  <br>
 		<i>Findings of the Association for Computational Linguistics: EMNLP (EMNLP-Findings), 2024</i> <br>
 		[<a href="https://arxiv.org/abs/2409.03256">arXiv</a>]
 		[<a href="https://aclanthology.org/2024.findings-emnlp.448/">paper</a>]
@@ -350,7 +353,9 @@
     <strong> Open-Source Projects </strong> <br>
 </p>
 	<ul style="list-style-type:none">
-		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI</a>: Paper reading list in conversational AI (⭐ 1k+).</li>
+		<li><a href="https://github.com/iwangjian/Paper-Reading-ConvAI" target="_blank">📖 Paper-Reading-ConvAI <img src="https://img.shields.io/github/stars/iwangjian/Paper-Reading-ConvAI?style=social" alt="Github Stars">
+			<img src="https://img.shields.io/github/forks/iwangjian/Paper-Reading-ConvAI?style=social" alt="Github Forks">
+		</a>: Paper reading list in conversational AI.</li>
 		<li><a href="https://github.com/iwangjian/pyloader" target="_blank">🐳 PyLoader</a>: An asynchronous Python dataloader for loading big datasets.</li>
 	</ul>
 
@@ -358,12 +363,11 @@
 <h2>Useful Resources</h2>
 <ul style="list-style-type:none">
 
-	<li> <a href="https://aideadlin.es/?sub=ML,NLP,DM,KR,CV,CG,RO,SP,AP,HCI" target="_blank">⏳ AI Conference Deadlines</a>: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines. </li>
-	<li> 📝 Writing Perfect Papers (<a href="https://www.bilibili.com/video/BV18v411n7mr/?spm_id_from=333.999.0.0" target="_blank">Bilibili</a> | 
-		<a href="https://www.youtube.com/watch?v=nUnmQmOOG4E" target="_blank">Youtube</a> |
-		<a href="https://iqua.ece.toronto.edu/papers/writing-perfect-papers-2021.pdf" target="_blank">Slides</a>): A long talk on writing "perfect papers" (by Prof. Baochun Li). </li>
+	<li> <a href="https://www.alignmentforum.org/posts/eJGptPbbFPZGLpjsp/highly-opinionated-advice-on-how-to-write-ml-papers" target="_blank">📝 Highly Opinionated Advice on How to Write ML Papers</a> (by Neel Nanda). </li>
+	<li> 📝 A long talk about "Writing Perfect Papers" (<a href="https://iqua.ece.toronto.edu/papers/writing-perfect-papers-2021.pdf" target="_blank">Slides</a> | 
+		<a href="https://www.youtube.com/watch?v=nUnmQmOOG4E" target="_blank">Youtube</a> | <a href="https://www.bilibili.com/video/BV18v411n7mr/?spm_id_from=333.999.0.0" target="_blank">Bilibili</a>) (by Prof. Baochun Li). </li>
+	<li> <a href="https://lilianweng.github.io/" target="_blank">🍷 Lilian Weng's Blog</a>:  Lilian Weng's blog with broad learning notes about DL/NLP.</li>
 	<li> <a href="https://www.ruder.io/" target="_blank">📰 Sebastian Ruder's Blog</a>: Sebastian Ruder's blog with deep insights about NLP/ML/DL.</li>
-	<li> <a href="https://lilianweng.github.io/" target="_blank">🍑 Lilian Weng's Blog</a>:  Lilian Weng's blog with broad learning notes about DL/NLP.</li>
 	<li> <a href="https://jalammar.github.io/" target="_blank">📸 Jay Alammar's Blog</a>: Visualizations and animations for many language models (Transformer, BERT, etc). </li>
 	<li> <a href="https://kexue.fm/" target="_blank">📡 Scientific Spaces</a>: Jianlin Su's blog (in Chinese) about ML|NLP theories with deep explorations.</li>
 	<li> <a href="https://github.com/zhijing-jin/nlp-phd-global-equality" target="_blank">👩‍🎓 Global Equality for PhDs</a>: Resources to help global equality for PhDs in NLP/AI, contributed by Zhijing Jin. </li>
@@ -389,7 +393,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2025 &copy; Jian Wang | Last updated: Apr. 2025
+        <br> 2020-2025 &copy; Jian Wang | Last updated: May. 2025
 		</center>
 	</p>		
 </div>
