--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 	My recent research interests mainly involve the following directions: 
 	<ul>
 		<li>
-			<b>Large Language Models (LLMs)</b>: test-time scaling, multi-turn interaction (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">arXiv'25</a>), etc.
+			<b>Large Language Models (LLMs)</b>: test-time scaling, multi-turn interaction (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
 		</li>
 		<li>
-			<b>Embodied Intelligence</b>: embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">arXiv'25</a>), task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">arXiv'25</a>), multimodal reasoning, etc.
+			<b>Embodied Intelligence</b>: embodied dialogue agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), multimodal reasoning, etc.
 		</li>
 		<li> 
 			<b>Conversational AI</b>: goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
@@ -311,15 +311,19 @@
 <ul style="list-style-type:none"> 
 <p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;">
 	<li>
-		Postdoc Matching Fund, PolyU
+		Postdoc Matching Fund (Awarded by PolyU)
+	</li>
 	<li>
-		Research Postgraduate Student Innovation Award, HKU
+		Research Postgraduate Student Innovation Award (Awarded by HKU)
+	</li>
+	<li>
+		Third Prize of 2021 Language and Intelligence Challenge (Awarded by CCF and CIPS)
 	</li>
 	<li>
 		AAAI 2020 Student Scholarship
 	</li>
 	<li>
-		First Class of Graduate Scholarship, SCUT
+		First Class of SCUT Graduate Scholarship 
 	</li>
 	<li>
 		National Scholarship of China
