--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	My recent research interests mainly involve the following directions: 
 	<ul>
 		<li>
-			<b>Large Language Models (LLMs)</b>: test-time scaling, multi-turn interaction (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
+			<b>Large Language Models (LLMs)</b>: multi-turn interaction (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
 		</li>
 		<li>
 			<b>Embodied Intelligence</b>: embodied dialogue agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), multimodal reasoning, etc.
@@ -119,29 +119,55 @@
 <h4>(see full list in <a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en" target="_blank">Google Scholar</a>) (*: Equal contribution; <sup>†</sup>: Corresponding author)</h4>
 </h2>
 
+<p> Preprints </p>
+<ul>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>SPA-RL: Reinforcing LLM Agents via Stepwise Progress Attribution</h3> 
+		Hanlin Wang, Chak Tou Leong, Jiashuo Wang, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li<br>
+		<i>arXiv:2505.20732, 2025</i> <br>
+		<a href="https://arxiv.org/abs/2505.20732">arXiv</a> | 
+		<a href="https://github.com/WangHanLinHenry/SPA-RL-Agent">Github</a>
+	    </p>
+	</li>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Reasoning Beyond Language: A Comprehensive Survey on Latent Chain-of-Thought Reasoning</h3> 
+		Xinghao Chen, Anhao Zhao, Heming Xia, Xuan Lu, Hanlin Wang, Yanjun Chen, Wei Zhang, <b>Jian Wang</b><sup>†</sup>, Wenjie Li, and Xiaoyu Shen<sup>†</sup><br>
+		<i>arXiv:2505.16782, 2025</i> <br>
+		<a href="http://arxiv.org/abs/2505.16782">arXiv</a> | 
+		<a href="https://github.com/EIT-NLP/Awesome-Latent-CoT">Github</a>
+	    </p>
+	</li>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Scaling over Scaling: Exploring Test-Time Scaling Pareto in Large Reasoning Models</h3> 
+		<b>Jian Wang</b>, Boyan Zhu, Chak Tou Leong, Yongqi Li<sup>†</sup>, and Wenjie Li.<br>
+		<i>arXiv:2505.20522, 2025</i> <br>
+		<a href="https://arxiv.org/abs/2505.20522">arXiv</a>
+	    </p>
+	</li>
+</ul>
 <p> 2025 </p>
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Training Turn-by-Turn Verifiers for Dialogue Tutoring Agents: The Curious Case of LLMs as Your Coding Tutors</h3> 
 		<b>Jian Wang</b>, Yinpei Dai, Yichi Zhang, Ziqiao Ma, Wenjie Li, and Joyce Chai.<br>
 		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2025</i> <br>
-		[<a href="https://arxiv.org/abs/2502.13311">arXiv</a>]
-		[<a href="https://github.com/iwangjian/Coding-Tutor">code</a>]
+		<a href="https://arxiv.org/abs/2502.13311">arXiv</a> |
+		<a href="https://github.com/iwangjian/Coding-Tutor">Github</a>
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>STeCa: Step-level Trajectory Calibration for LLM Agent Learning</h3> 
 		Hanlin Wang, <b>Jian Wang</b><sup>†</sup>, Chak Tou Leong, and Wenjie Li.<br>
 		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2025</i> <br>
-		[<a href="https://arxiv.org/abs/2502.14276">arXiv</a>]
-		[<a href="https://github.com/WangHanLinHenry/STeCa">code</a>]
+		<a href="https://arxiv.org/abs/2502.14276">arXiv</a> |
+		<a href="https://github.com/WangHanLinHenry/STeCa">Github</a>
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Why Safeguarded Ships Run Aground? Aligned Large Language Models' Safety Mechanisms Tend to Be Anchored in The Template Region</h3> 
 		Chak Tou Leong, Qingyu Yin, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li.<br>
 		<i>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025.</i> <br>
-		[<a href="https://arxiv.org/abs/2502.13946">arXiv</a>]
+		<a href="https://arxiv.org/abs/2502.13946">arXiv</a>
 	    </p>
 	</li>
 </ul>
@@ -150,98 +176,98 @@
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"></p>
 		<h3>E2CL: Exploration-based Error Correction Learning for Embodied Agents</h3> 
-		Hanlin Wang, Chak Tou Leong, <b>Jian Wang</b>, and Wenjie Li.  <br>
+		Hanlin Wang*, Chak Tou Leong*, <b>Jian Wang</b>, and Wenjie Li.  <br>
 		<i>Findings of the Association for Computational Linguistics: EMNLP (EMNLP-Findings), 2024</i> <br>
-		[<a href="https://arxiv.org/abs/2409.03256">arXiv</a>]
-		[<a href="https://aclanthology.org/2024.findings-emnlp.448/">paper</a>]
+		<a href="https://arxiv.org/abs/2409.03256">arXiv</a> |
+		<a href="https://aclanthology.org/2024.findings-emnlp.448/">Paper</a>
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;"></p>
 		<h3>SCREEN: A Benchmark for Situated Conversational Recommendation</h3> 
 		Dongding Lin*, <b>Jian Wang</b>*, Chak Tou Leong, and Wenjie Li.<br>
 		<i>The 32nd ACM International Conference on Multimedia (ACM MM), 2024.</i> <br>
-		[<a href="https://dl.acm.org/doi/10.1145/3664647.3681651">paper</a>]
-		[<a href="https://github.com/DongdingLin/SCREEN">code</a>]
+		<a href="https://dl.acm.org/doi/10.1145/3664647.3681651">Paper</a> | 
+		<a href="https://github.com/DongdingLin/SCREEN">Github</a>
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Instruct Once, Chat Consistently in Multiple Rounds: An Efficient Tuning Framework for Dialogue</h3> 
 		<b>Jian Wang</b>, Chak Tou Leong, Jiashuo Wang, Dongding Lin, Wenjie Li, and Xiao-Yong Wei. <br>
 		<i>The 62nd Annual Meeting of the Association for Computational Linguistics (ACL), 2024.</i> <br>
-		[<a href="https://arxiv.org/abs/2402.06967">arXiv</a>]
-		[<a href="https://aclanthology.org/2024.acl-long.219/">paper</a>]
-		[<a href="https://github.com/iwangjian/Midi-Tuning">code</a>]
+		<a href="https://arxiv.org/abs/2402.06967">arXiv</a> |
+		<a href="https://aclanthology.org/2024.acl-long.219/">Paper</a> |
+		<a href="https://github.com/iwangjian/Midi-Tuning">Github</a>
 	    </p>
 	</li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Target-constrained Bidirectional Planning for Generation of Target-oriented Proactive Dialogue</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
 		<i>ACM Transactions on Information Systems (TOIS), 2024.</i> <br>
-		[<a href="https://arxiv.org/abs/2403.06063">arXiv</a>]
-		[<a href="https://doi.org/10.1145/3652598">paper</a>]
-		[<a href="https://github.com/iwangjian/TRIP">code</a>]
+		<a href="https://arxiv.org/abs/2403.06063">arXiv</a> |
+		<a href="https://doi.org/10.1145/3652598">Paper</a> |
+		<a href="https://github.com/iwangjian/TRIP">Github</a>
 	    </p>
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>COOPER: Coordinating Specialized Agents towards a Complex Dialogue Goal</h3> 
 		Yi Cheng, Wenge Liu, <b>Jian Wang</b>, Chak Tou Leong, Yi Ouyang, Wenjie Li, Xian Wu, and Yefeng Zheng. <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2024.</i> <br>
-		[<a href="https://arxiv.org/abs/2312.11792">arXiv</a>]
-		[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/29739">paper</a>]
-		[<a href="https://github.com/YiCheng98/Cooper">code</a>]
+		<a href="https://arxiv.org/abs/2312.11792">arXiv</a> |
+		<a href="https://ojs.aaai.org/index.php/AAAI/article/view/29739">Paper</a> |
+		<a href="https://github.com/YiCheng98/Cooper">Github</a>
 	    </p>
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Target-oriented Proactive Dialogue Systems with Personalization: Problem Formulation and Dataset Curation</h3> 
 		<b>Jian Wang</b>, Yi Cheng, Dongding Lin, Chak Tou Leong, and Wenjie Li. <br>
 		<i>The 2023 Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
-		[<a href="https://arxiv.org/abs/2310.07397">arXiv</a>]
-		[<a href="https://aclanthology.org/2023.emnlp-main.72/">paper</a>]
-		[<a href="https://github.com/iwangjian/TopDial">code</a>]
+		<a href="https://arxiv.org/abs/2310.07397">arXiv</a> |
+		<a href="https://aclanthology.org/2023.emnlp-main.72/">Paper</a> |
+		<a href="https://github.com/iwangjian/TopDial">Github</a>
 	    </p>
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Self-Detoxifying Language Models via Toxification Reversal</h3> 
 		Chak Tou Leong, Yi Cheng, Jiashuo Wang, <b>Jian Wang</b>, and Wenjie Li. <br>
 		<i>The 2023 Conference on Empirical Methods in Natural Language Processing (EMNLP), 2023.</i> <br>
-		[<a href="https://arxiv.org/abs/2310.09573">arXiv</a>]
-		[<a href="https://aclanthology.org/2023.emnlp-main.269/">paper</a>]
-		[<a href="https://github.com/cooperleong00/ToxificationReversal">code</a>]
+		<a href="https://arxiv.org/abs/2310.09573">arXiv</a> |
+		<a href="https://aclanthology.org/2023.emnlp-main.269/">Paper</a> |
+		<a href="https://github.com/cooperleong00/ToxificationReversal">Github</a>
 	    </p>
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Dialogue Planning via Brownian Bridge Stochastic Process for Goal-directed Proactive Dialogue</h3> 
 		<b>Jian Wang</b>*, Dongding Lin*, and Wenjie Li. <br>
 		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2023.</i> <br>
-		[<a href="https://arxiv.org/abs/2305.05290">arXiv</a>]
-		[<a href="https://aclanthology.org/2023.findings-acl.25/">paper</a>]
-		[<a href="https://github.com/iwangjian/Color4Dial">code</a>]
+		<a href="https://arxiv.org/abs/2305.05290">arXiv</a> |
+		<a href="https://aclanthology.org/2023.findings-acl.25/">Paper</a> |
+		<a href="https://github.com/iwangjian/Color4Dial">Github</a>
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Medical Dialogue Generation via Dual Flow Modeling</h3> 
 		Kaishuai Xu, Wenjun Hou, Yi Cheng, <b>Jian Wang</b>, and Wenjie Li. <br>
 		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2023.</i> <br>
-		[<a href="https://arxiv.org/abs/2305.18109">arXiv</a>]
-		[<a href="https://aclanthology.org/2023.findings-acl.423/">paper</a>]
-		[<a href="https://github.com/kaishxu/DFMed">code</a>]
+		<a href="https://arxiv.org/abs/2305.18109">arXiv</a> |
+		<a href="https://aclanthology.org/2023.findings-acl.423/">Paper</a> |
+		<a href="https://github.com/kaishxu/DFMed">Github</a>
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>A Target-driven Planning Approach for Goal-directed Dialog Systems</h3> 
 		<b>Jian Wang</b>, Dongding Lin, and Wenjie Li. <br>
 		<i>IEEE Transactions on Neural Networks and Learning Systems (TNNLS), 2023.</i> <br>
-		[<a href="https://ieeexplore.ieee.org/document/10042178">paper</a>]
-		[<a href="https://iwangjian.github.io/pdf/TNNLS2023.wang.pdf">PDF</a>]
-		[<a href="https://github.com/iwangjian/Plan4RecDial">code</a>]
+		<a href="https://ieeexplore.ieee.org/document/10042178">Paper</a> |
+		<a href="https://iwangjian.github.io/pdf/TNNLS2023.wang.pdf">PDF</a> |
+		<a href="https://github.com/iwangjian/Plan4RecDial">Github</a>
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>COLA: Improving Conversational Recommender Systems by Collaborative Augmentation</h3>
 		Dongding Lin*, <b>Jian Wang</b>*, and Wenjie Li. <br>
 		<i>AAAI Conference on Artificial Intelligence (AAAI), 2023.</i> <br>
-		[<a href="https://arxiv.org/abs/2212.07767">arXiv</a>]
-		[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/25567">paper</a>]
+		<a href="https://arxiv.org/abs/2212.07767">arXiv</a> |
+		<a href="https://ojs.aaai.org/index.php/AAAI/article/view/25567">Paper</a>
 	    </p> 
     </li>
 </ul>
@@ -252,34 +278,34 @@
 		<h3>Template-guided Clarifying Question Generation for Web Search Clarification</h3> 
 		<b>Jian Wang</b> and Wenjie Li. <br> 
 		<i>ACM International Conference on Information and Knowledge Management (CIKM), 2021.</i> <br>
-		[<a href="https://dl.acm.org/doi/10.1145/3459637.3482199">paper</a>]
-		[<a href="https://iwangjian.github.io/pdf/CIKM2021.slides.pdf">slides</a>]
-		[<a href="https://github.com/iwangjian/TG-ClariQ">code</a>]
+		<a href="https://dl.acm.org/doi/10.1145/3459637.3482199">Paper</a> |
+		<a href="https://iwangjian.github.io/pdf/CIKM2021.slides.pdf">Slides</a> |
+		<a href="https://github.com/iwangjian/TG-ClariQ">Github</a>
 	    </p> 
     </li>
 	<li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Dual Dynamic Memory Network for End-to-End Multi-turn Task-oriented Dialog Systems</h3> 
 		<b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 		<i>International Conference on Computational Linguistics (COLING), 2020.</i> <br>
-		[<a href="https://www.aclweb.org/anthology/2020.coling-main.362">paper</a>]
-		[<a href="https://github.com/siat-nlp/DDMN">code</a>] 
+		<a href="https://www.aclweb.org/anthology/2020.coling-main.362">Paper</a> |
+		<a href="https://github.com/siat-nlp/DDMN">Github</a>
 	    </p> 
     </li>
     <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
             <h3>Improving Knowledge-aware Dialogue Generation via Knowledge Base Question Answering</h3> 
             <b>Jian Wang</b>, Junhao Liu, Wei Bi, Xiaojiang Liu, Kejing He, Ruifeng Xu, and Min Yang. <br> 
 	        <i>AAAI Conference on Artificial Intelligence (AAAI), 2020.</i> <br>
-			[<a href="https://arxiv.org/abs/1912.07491">arXiv</a>]
-			[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/6453">paper</a>]
-		    [<a href="https://github.com/siat-nlp/TransDG">code</a>] 
+			<a href="https://arxiv.org/abs/1912.07491">arXiv</a> |
+			<a href="https://ojs.aaai.org/index.php/AAAI/article/view/6453">Paper</a> |
+		    <a href="https://github.com/siat-nlp/TransDG">Github</a>
 	    </p> 
 	</li>	
     <li> <p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
             <h3>Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</h3> 
             <b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
 	        <i>International Journal of Machine Learning and Cybernetics (JMLC), 2020.</i> <br>
-			[<a href="https://doi.org/10.1007/s13042-020-01133-3">paper</a>]
-			[<a href="https://iwangjian.github.io/pdf/JMLC2020.wang.pdf">PDF</a>]
+			<a href="https://doi.org/10.1007/s13042-020-01133-3">Paper</a> |
+			<a href="https://iwangjian.github.io/pdf/JMLC2020.wang.pdf">PDF</a>
 	    </p> 
 	</li>
 
