--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<b>Large Language Models (LLMs)</b>: multi-turn interaction (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
 		</li>
 		<li>
-			<b>Embodied Intelligence</b>: embodied dialogue agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), multimodal reasoning, etc.
+			<b>Embodied Intelligence</b>: embodied dialogue agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), embodied social reasoning, etc.
 		</li>
 		<li> 
 			<b>Conversational AI</b>: goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
@@ -167,7 +167,8 @@
 		<h3>Why Safeguarded Ships Run Aground? Aligned Large Language Models' Safety Mechanisms Tend to Be Anchored in The Template Region</h3> 
 		Chak Tou Leong, Qingyu Yin, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li.<br>
 		<i>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025.</i> <br>
-		<a href="https://arxiv.org/abs/2502.13946">arXiv</a>
+		<a href="https://arxiv.org/abs/2502.13946">arXiv</a> |
+		<a href="https://github.com/cooperleong00/TASA">Github</a>
 	    </p>
 	</li>
 </ul>
