--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		<h3>Scaling over Scaling: Exploring Test-Time Scaling Pareto in Large Reasoning Models</h3> 
+		<h3>Scaling over Scaling: Exploring Test-Time Scaling Plateau in Large Reasoning Models</h3> 
 		<b>Jian Wang</b>, Boyan Zhu, Chak Tou Leong, Yongqi Li<sup>†</sup>, and Wenjie Li.<br>
 		<i>arXiv:2505.20522, 2025</i> <br>
 		<a href="https://arxiv.org/abs/2505.20522">arXiv</a>
@@ -424,7 +424,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2025 &copy; Jian Wang | Last updated: May. 2025
+        <br> 2020-2025 &copy; Jian Wang | Last updated: June 2025
 		</center>
 	</p>		
 </div>
