--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 					
 					<a href="https://scholar.google.com/citations?user=HUtas_0gHGIC&hl=en"><img src="pic/google-scholar-96.png" height="25px" style="margin-bottom:-5px"> Google Scholar</a> &nbsp | &nbsp
 					<a href="https://github.com/iwangjian"><img src="pic/github-96.png" height="25px" style="margin-bottom:-5px"> Github</a> &nbsp | &nbsp
-					<a href="pic/WeChat.png"><img src="pic/wechat-100.png" height="25px" style="margin-bottom:-5px"> WeChat</a> &nbsp | &nbsp
 					<a href="https://twitter.com/jwanglvy"><img src="pic/twitter-100.png" height="25px" style="margin-bottom:-5px"> Twitter</a>
 				
 				</p>
@@ -100,10 +99,10 @@
 	My recent research interests mainly involve the following directions: 
 	<ul>
 		<li>
-			<b>Large Language Models (LLMs)</b>: multi-turn interaction (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
+			<b>Large Language Models (LLMs)</b>: LLM agent learning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25</a>), multi-turn interaction (<a href="https://arxiv.org/abs/2402.06967" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
 		</li>
 		<li>
-			<b>Embodied Intelligence</b>: embodied dialogue agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), embodied social reasoning, etc.
+			<b>Embodied Intelligence</b>: embodied dialogue agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), embodied reasoning, etc.
 		</li>
 		<li> 
 			<b>Conversational AI</b>: goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
