--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 	During my graduate studies, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
+<p style="text-align:justify; color: red;";>
+	🔥 <i>Our group has 1 ~ 2 PhD positions for Spring/Fall 2026 who are passionate about conversational agents, language-action embodiment, and multimodal applications. If you are interested in these topics, feel free to email me your CV and a brief self-intro!</i>
+</p>
 
 <h2> News </h2>
 <p style="text-align:justify";>
@@ -99,19 +102,19 @@
 	My recent research interests mainly involve the following directions: 
 	<ul>
 		<li>
-			<b>Large Language Models (LLMs)</b>: LLM agent learning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25</a>), multi-turn interaction (<a href="https://arxiv.org/abs/2402.06967" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
+			<b>Large Language Models (LLMs)</b>: LLM agent learning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), multi-turn interaction (<a href="https://arxiv.org/abs/2402.06967" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
 		</li>
 		<li>
-			<b>Embodied Intelligence</b>: embodied dialogue agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), embodied reasoning, etc.
+			<b>Embodied Intelligence</b>: embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), embodied collaboration, etc.
 		</li>
 		<li> 
 			<b>Conversational AI</b>: goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
 		</li>
 	</ul>
 </p>
-<p style="text-align:justify";>
-	👉 <i> I am actively seeking highly motivated PhD/master/undergraduate students for collaborative research, including but not limited to the above topics. Please feel free to reach out to me if you are interested.</i>
-</p>
+<!-- <p style="text-align:justify";>
+	👉 <i> I am actively seeking highly motivated students for collaborative research, including but not limited to the above topics. Please feel free to reach out to me if you are interested.</i>
+</p> -->
 
 
 <h2> Selected Publications
@@ -134,6 +137,13 @@
 		<i>arXiv:2505.16782, 2025</i> <br>
 		<a href="http://arxiv.org/abs/2505.16782">arXiv</a> | 
 		<a href="https://github.com/EIT-NLP/Awesome-Latent-CoT">Github</a>
+	    </p>
+	</li>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Probabilistic Optimality for Inference-time Scaling</h3> 
+		Youkang Wang*, <b>Jian Wang</b>*, Rubing Chen, Xiao-Yong Wei, and Qing Li.<br>
+		<i>arXiv:2506.22376, 2025</i> <br>
+		<a href="https://arxiv.org/abs/2506.22376">arXiv</a>
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
@@ -340,7 +350,7 @@
 </p>
 	<ul style="list-style-type:none">
 		<li>Reviewer for ACL Rolling Review (ARR)</li>
-		<li>Program Committee Member: NeurIPS (2025 - ), ACL (2023 - ), EMNLP (2022 - ), COLING (2020, 2022)</li>
+		<li>Program Committee Member: NeurIPS, ACL, EMNLP, COLING, ACM MM</li>
 		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM)</li>
 	</ul>
 
@@ -350,7 +360,7 @@
 	<ul style="list-style-type:none">
 		<li>COMP 6709: Advanced Natural Language Processing, Spring 2023 | 2022, PolyU</li>
 		<li>COMP 2021: Object-Oriented Programming, Fall 2022 | 2021, PolyU</li>
-		<li>Design and Analysis of Algorithms, Spring 2018, SCUT</li>
+		<li>Algorithm Design and Analysis, Spring 2018, SCUT</li>
 		<li>Advanced Programming Language (C++), Fall 2017, SCUT</li>
 	</ul>
 
