--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 	My recent research interests mainly involve the following directions: 
 	<ul>
 		<li>
-			<b>Large Language Models (LLMs)</b>: LLM agent learning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), multi-turn interaction (<a href="https://arxiv.org/abs/2402.06967" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
+			<b>Large Language Models (LLMs)</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), multi-turn interaction (<a href="https://arxiv.org/abs/2402.06967" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
 		</li>
 		<li>
-			<b>Embodied Intelligence</b>: embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), embodied collaboration, etc.
+			<b>Embodied Interaction</b>: embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>, <a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), embodied collaboration, etc.
 		</li>
 		<li> 
 			<b>Conversational AI</b>: goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
@@ -349,8 +349,8 @@
     <strong> Academic Services </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>Reviewer for ACL Rolling Review (ARR)</li>
-		<li>Program Committee Member: NeurIPS, ACL, EMNLP, COLING, ACM MM</li>
+		<li>Area Chair: ACL Rolling Review (ARR), AACL (2025)</li>
+		<li>Program Committee Member: NeurIPS (2025 — ), ACL (2023 — ), EMNLP (2022 — ), COLING (2020 — )</li>
 		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM)</li>
 	</ul>
 
