--- a/index.html
+++ b/index.html
@@ -65,10 +65,13 @@
 <h2> News </h2>
 <p style="text-align:justify";>
 	<p style="text-align:justify";>
+		[Jun. 2025] 🔥 Our <a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL paper</a> was selected as oral presentation (Top 8%)!
+	</p>
+	<p style="text-align:justify";>
 		[May. 2025] 🔥 Got three papers accepted by <a href="https://2025.aclweb.org/" target="_blank">ACL 2025</a>! Welcome to have a chat in Vienna.
 	</p>
 	<p style="text-align:justify";>
-		[Feb. 2025] 🔥 Thrilled to be awarded the PolyU Postdoc Matching Fund.
+		[Feb. 2025] &nbsp Thrilled to be awarded the PolyU Postdoc Matching Fund.
 	</p>
 	<p style="text-align:justify";>
 		[Oct. 2024] &nbsp Will be working as a Postdoc at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
