--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </p>
 
 <p style="text-align:justify; color: red;";>
-	🔥 <i>Our group has 1 ~ 2 PhD positions for Spring/Fall 2026 who are passionate about conversational agents, language-action embodiment, and multimodal applications. If you are interested in these topics, feel free to email me your CV and a brief self-intro!</i>
+	🔥 <i>Our group has 1 ~ 2 PhD positions for Spring/Fall 2026 who are passionate about LLM agents, multimodal learning, and conversational recommendations. If you are interested in these topics, feel free to email me your CV and a brief self-intro!</i>
 </p>
 
 <h2> News </h2>
@@ -102,16 +102,16 @@
 
 <h2>Research</h2>
 <p style="text-align:justify";>
-	My recent research interests mainly involve the following directions: 
+	My recent research primarily focuses on the interactions between humans, agents, and environments. Specifically, I explore the following directions:
 	<ul>
 		<li>
-			<b>Large Language Models (LLMs)</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), multi-turn interaction (<a href="https://arxiv.org/abs/2402.06967" target="_blank">ACL'24</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), etc.
+			<b>Reasoning and Reliability in Large Language Models (LLMs)</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), etc.
 		</li>
 		<li>
-			<b>Embodied Interaction</b>: embodied agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25</a>), agentic task planning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>, <a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25</a>), embodied collaboration, etc.
+			<b>Digital and Embodied Agents</b>: embodied reasoning, environment adaptation, tutoring agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25a</a>), agentic task planning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>, <a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25b</a>), etc.
 		</li>
 		<li> 
-			<b>Conversational AI</b>: goal-driven proactivity (<a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>, <a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), role-playing personalization (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), role consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), emotional support (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
+			<b>Conversational AI</b>: proactive dialogue systems (<a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>, <a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>), dialogue consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), personalized role-playing (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), emotional support conversation (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
 		</li>
 	</ul>
 </p>
@@ -337,9 +337,6 @@
 		AAAI 2020 Student Scholarship
 	</li>
 	<li>
-		First Class of SCUT Graduate Scholarship 
-	</li>
-	<li>
 		National Scholarship of China
 	</li>
 </p>
@@ -353,7 +350,7 @@
 </p>
 	<ul style="list-style-type:none">
 		<li>Area Chair: ACL Rolling Review (ARR), AACL (2025)</li>
-		<li>Program Committee Member: NeurIPS (2025 — ), ACL (2023 — ), EMNLP (2022 — ), COLING (2020 — )</li>
+		<li>Program Committee Member: NeurIPS, ACL, EMNLP, AAAI, COLING</li>
 		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM)</li>
 	</ul>
 
