--- a/index.html
+++ b/index.html
@@ -58,17 +58,23 @@
 	During my graduate studies, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
-<p style="text-align:justify; color: red;";>
+<!-- <p style="text-align:justify; color: red;";>
 	🔥 <i>Our group has 1 ~ 2 PhD positions for Spring/Fall 2026 who are passionate about LLM agents, multimodal learning, and conversational recommendations. If you are interested in these topics, feel free to email me your CV and a brief self-intro!</i>
-</p>
+</p> -->
 
 <h2> News </h2>
 <p style="text-align:justify";>
 	<p style="text-align:justify";>
-		[Jun. 2025] 🔥 Our <a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL paper</a> was selected as oral presentation (Top 8%)!
+		[Aug. 2025] 🔥 Got one paper accepted by <a href="https://2025.emnlp.org/" target="_blank">EMNLP 2025</a>.
 	</p>
 	<p style="text-align:justify";>
-		[May. 2025] 🔥 Got three papers accepted by <a href="https://2025.aclweb.org/" target="_blank">ACL 2025</a>! Welcome to have a chat in Vienna.
+		[Jul. 2025] 🔥 Got one paper accepted by <a href="https://acmmm2025.org/" target="_blank">ACM MM 2025</a>.
+	</p>
+	<p style="text-align:justify";>
+		[Jun. 2025] Our <a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL paper</a> was selected as an oral presentation (Top 8%)!
+	</p>
+	<p style="text-align:justify";>
+		[May. 2025] &anbsp Got three papers accepted by <a href="https://2025.aclweb.org/" target="_blank">ACL 2025</a>! Welcome to have a chat in Vienna.
 	</p>
 	<p style="text-align:justify";>
 		[Feb. 2025] &nbsp Thrilled to be awarded the PolyU Postdoc Matching Fund.
@@ -105,7 +111,7 @@
 	My recent research primarily focuses on the interactions between humans, agents, and environments. Specifically, I explore the following directions:
 	<ul>
 		<li>
-			<b>Reasoning and Reliability in Large Language Models (LLMs)</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), etc.
+			<b>Reasoning and Reliability of Large Language Models (LLMs)</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), etc.
 		</li>
 		<li>
 			<b>Digital and Embodied Agents</b>: embodied reasoning, environment adaptation, tutoring agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25a</a>), agentic task planning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>, <a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25b</a>), etc.
