--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 		[Aug. 2025] 🔥 Got one paper accepted by <a href="https://2025.emnlp.org/" target="_blank">EMNLP 2025</a>.
 	</p>
 	<p style="text-align:justify";>
-		[Jul. 2025] 🔥 Got one paper accepted by <a href="https://acmmm2025.org/" target="_blank">ACM MM 2025</a>.
+		[July 2025] 🔥 Got one paper accepted by <a href="https://acmmm2025.org/" target="_blank">ACM MM 2025</a>.
 	</p>
 	<p style="text-align:justify";>
-		[Jun. 2025] Our <a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL paper</a> was selected as an oral presentation (Top 8%)!
+		[Jun. 2025] 🔥 Our <a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL paper</a> was selected as an oral presentation (Top 8%)!
 	</p>
 	<p style="text-align:justify";>
-		[May. 2025] &anbsp Got three papers accepted by <a href="https://2025.aclweb.org/" target="_blank">ACL 2025</a>! Welcome to have a chat in Vienna.
+		[May. 2025] &nbsp Got three papers accepted by <a href="https://2025.aclweb.org/" target="_blank">ACL 2025</a>! Welcome to have a chat in Vienna.
 	</p>
 	<p style="text-align:justify";>
 		[Feb. 2025] &nbsp Thrilled to be awarded the PolyU Postdoc Matching Fund.
