--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
 <h2>Research</h2>
 <p style="text-align:justify";>
-	My recent research primarily focuses on the interactions between humans, agents, and environments. Specifically, I explore the following directions:
+	My recent research primarily investigates the interactions among humans, intelligent agents, and their environments. Specifically, I explore the following directions:
 	<ul>
 		<li>
-			<b>Reasoning and Reliability of Large Language Models (LLMs)</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), etc.
+			<b>Reasoning and Reliability of LLMs</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), etc.
 		</li>
 		<li>
 			<b>Digital and Embodied Agents</b>: embodied reasoning, environment adaptation, tutoring agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25a</a>), agentic task planning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>, <a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25b</a>), etc.
