--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 		</li>
 	</ul>
 </p>
-<!-- <p style="text-align:justify";>
-	👉 <i> I am actively seeking highly motivated students for collaborative research, including but not limited to the above topics. Please feel free to reach out to me if you are interested.</i>
-</p> -->
+<p style="text-align:justify";>
+	👉 <i> I welcome highly motivated students to collaborate on research projects related to (but not limited to) the topics mentioned above. If you are interested, please feel free to contact me via email.</i>
+</p>
 
 
 <h2> Selected Publications
@@ -414,7 +414,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2025 &copy; Jian Wang | Last updated: June 2025
+        <br> 2020-2025 &copy; Jian Wang | Last updated: August 2025
 		</center>
 	</p>		
 </div>
