--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 	<ul style="list-style-type:none">
 		<li>Area Chair: ACL Rolling Review (ARR), AACL (2025)</li>
 		<li>Program Committee Member: NeurIPS, ACL, EMNLP, AAAI, COLING</li>
-		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM)</li>
+		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM), ACM Transactions on Information Systems (TOIS) </li>
 	</ul>
 
 <p style="margin-left: 0px; line-height: 120%; margin-top: 15px; margin-bottom: 15px;">
