--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 
 <h2>Research</h2>
 <p style="text-align:justify";>
-	My recent research primarily investigates the interactions among humans, intelligent agents, and their environments. Specifically, I explore the following directions:
+	My research interests are in natural language processing (NLP), large language models (LLMs), and AI more broadly. Recently, I have been focusing on the following directions:
 	<ul>
 		<li>
 			<b>Reasoning and Reliability of LLMs</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), etc.
 		</li>
 		<li>
-			<b>Digital and Embodied Agents</b>: embodied reasoning, environment adaptation, tutoring agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25a</a>), agentic task planning (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>, <a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25b</a>), etc.
+			<b>Digital and Embodied Agents</b>: embodied reasoning, environment adaptation, agentic RL (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), tutoring agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25a</a>),  task planning(<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25b</a>), etc.
 		</li>
 		<li> 
 			<b>Conversational AI</b>: proactive dialogue systems (<a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>, <a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>), dialogue consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), personalized role-playing (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), emotional support conversation (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
@@ -122,7 +122,7 @@
 	</ul>
 </p>
 <p style="text-align:justify";>
-	👉 <i> I welcome highly motivated students to collaborate on research projects related to (but not limited to) the topics mentioned above. If you are interested, please feel free to contact me via email.</i>
+	👉 <i> Welcome highly motivated students to collaborate on research projects related to (but not limited to) the topics mentioned above. If you are interested, please feel free to drop me an email.</i>
 </p>
 
 
@@ -152,7 +152,8 @@
 		<h3>Probabilistic Optimality for Inference-time Scaling</h3> 
 		Youkang Wang*, <b>Jian Wang</b>*, Rubing Chen, Xiao-Yong Wei, and Qing Li.<br>
 		<i>arXiv:2506.22376, 2025</i> <br>
-		<a href="https://arxiv.org/abs/2506.22376">arXiv</a>
+		<a href="https://arxiv.org/abs/2506.22376">arXiv</a> | 
+		<a href="https://github.com/Albertwyk/OptScale">Github</a>
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
@@ -166,10 +167,27 @@
 <p> 2025 </p>
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Benchmarking for Domain-Specific LLMs: A Case Study on Academia and Beyond</h3> 
+		Rubing Chen, Jiaxin Wu, <b>Jian Wang</b>, Xulu Zhang, Wenqi Fan, Chenghua Lin, Xiao-Yong Wei, Qing Li.<br>
+		<i>Findings of the Association for Computational Linguistics: EMNLP (EMNLP-Findings), 2025</i> <br>
+		<a href="https://arxiv.org/abs/2508.07353">arXiv</a> |
+		<a href="https://github.com/Anya-RB-Chen/COMP-COMPr">Github</a>
+	    </p>
+	</li>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>Towards Harmless Multimodal Assistants with Blind Preference Optimization</h3> 
+		Yongqi Li, Lu Yang, <b>Jian Wang</b>, Runyang You, Wenjie Li, and Liqiang Nie. <br>
+		<i>The 33rd ACM International Conference on Multimedia (ACM MM), 2025.</i> <br>
+		<a href="https://arxiv.org/abs/2503.14189">arXiv</a> |
+		<a href="https://github.com/Lu-Yang666/MMsafe-PO">Github</a>
+	    </p>
+	</li>
+	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Training Turn-by-Turn Verifiers for Dialogue Tutoring Agents: The Curious Case of LLMs as Your Coding Tutors</h3> 
 		<b>Jian Wang</b>, Yinpei Dai, Yichi Zhang, Ziqiao Ma, Wenjie Li, and Joyce Chai.<br>
 		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2025</i> <br>
 		<a href="https://arxiv.org/abs/2502.13311">arXiv</a> |
+		<a href="https://aclanthology.org/2025.findings-acl.642/">Paper</a> |
 		<a href="https://github.com/iwangjian/Coding-Tutor">Github</a>
 	    </p>
 	</li>
@@ -178,6 +196,7 @@
 		Hanlin Wang, <b>Jian Wang</b><sup>†</sup>, Chak Tou Leong, and Wenjie Li.<br>
 		<i>Findings of the Association for Computational Linguistics: ACL (ACL-Findings), 2025</i> <br>
 		<a href="https://arxiv.org/abs/2502.14276">arXiv</a> |
+		<a href="https://aclanthology.org/2025.findings-acl.604/">Paper</a> |
 		<a href="https://github.com/WangHanLinHenry/STeCa">Github</a>
 	    </p>
 	</li>
@@ -186,6 +205,7 @@
 		Chak Tou Leong, Qingyu Yin, <b>Jian Wang</b><sup>†</sup>, and Wenjie Li.<br>
 		<i>The 63rd Annual Meeting of the Association for Computational Linguistics (ACL), 2025.</i> <br>
 		<a href="https://arxiv.org/abs/2502.13946">arXiv</a> |
+		<a href="https://aclanthology.org/2025.acl-long.738/">Paper</a> |
 		<a href="https://github.com/cooperleong00/TASA">Github</a>
 	    </p>
 	</li>
@@ -364,8 +384,10 @@
 	<strong> Teaching Assistant</strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>COMP 6709: Advanced Natural Language Processing, Spring 2023 | 2022, PolyU</li>
-		<li>COMP 2021: Object-Oriented Programming, Fall 2022 | 2021, PolyU</li>
+		<li>COMP 6709: Advanced Natural Language Processing, Spring 2023, PolyU</li>
+		<li>COMP 6709: Advanced Natural Language Processing, Spring 2022, PolyU</li>
+		<li>COMP 2021: Object-Oriented Programming, Fall 2022, PolyU</li>
+		<li>COMP 2021: Object-Oriented Programming, Fall 2021, PolyU</li>
 		<li>Algorithm Design and Analysis, Spring 2018, SCUT</li>
 		<li>Advanced Programming Language (C++), Fall 2017, SCUT</li>
 	</ul>
