--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
 
 
 <p style="text-align:justify";>
-	Hi there! I am a Postdoctoral Fellow at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>. I obtained my PhD degree from <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a>, 
+	Hi there! I am a Postdoctoral Fellow at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>. I earned my PhD degree from <a href="https://www.polyu.edu.hk/" target="_blank">The Hong Kong Polytechnic University</a> in 2024, 
 	supervised by Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank"> Maggie Wenjie Li</a>.
 	During the spring and summer of 2024, I visited the <a href="https://sled.eecs.umich.edu/" target="_blank">SLED Lab</a> at <a href="https://umich.edu/" target="_blank">University of Michigan</a>,
 	where I was so honored to work with Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">Joyce Chai</a>.
 	
 </p>
 <p style="text-align:justify";>
-	Prior to that, I received my MSc and BEng degrees from the School of Computer Science and Engineering, 
+	Prior to my PhD, I earned MSc and BEng degrees from the School of Computer Science and Engineering, 
 	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology</a>. 
 	During my graduate studies, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
 
-<!-- <p style="text-align:justify; color: red;";>
-	🔥 <i>Our group has 1 ~ 2 PhD positions for Spring/Fall 2026 who are passionate about LLM agents, multimodal learning, and conversational recommendations. If you are interested in these topics, feel free to email me your CV and a brief self-intro!</i>
-</p> -->
+<p style="text-align:justify; color: red;";>
+	🔥 <i>Our group has 2 ~ 3 PhD positions for Fall 2026 who are passionate about LLM agents, embodied reasoning, situated interactions, and related areas. If you are interested, feel free to email me your CV and a brief self-intro!</i>
+</p>
 
 <h2> News </h2>
 <p style="text-align:justify";>
