--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	
 </p>
 <p style="text-align:justify";>
-	Prior to my PhD, I earned MSc and BEng degrees from the School of Computer Science and Engineering, 
+	Prior to my PhD, I obtained MSc and BEng degrees from the School of Computer Science and Engineering, 
 	<a href="https://www.scut.edu.cn/en/" target="_blank">South China University of Technology</a>. 
 	During my graduate studies, I was fortunate to be co-advised by Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a> at SIAT, Chinese Academy of Sciences.
 </p>
@@ -111,10 +111,10 @@
 	My research interests are in natural language processing (NLP), large language models (LLMs), and AI more broadly. Recently, I have been focusing on the following directions:
 	<ul>
 		<li>
-			<b>Reasoning and Reliability of LLMs</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), etc.
+			<b>Reasoning and Reliability of LLMs</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), strategic reasoning, etc.
 		</li>
 		<li>
-			<b>Digital and Embodied Agents</b>: embodied reasoning, environment adaptation, agentic RL (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), tutoring agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25a</a>),  task planning(<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25b</a>), etc.
+			<b>LLM-powered Agents</b>: agentic RL (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), task planning(<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25a</a>), tutoring agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25b</a>), embodied agents, agentic memory, etc.
 		</li>
 		<li> 
 			<b>Conversational AI</b>: proactive dialogue systems (<a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>, <a href="https://aclanthology.org/2023.findings-acl.25/" target="_blank">ACL-Findings'23</a>), dialogue consistentcy (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), personalized role-playing (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), emotional support conversation (<a href="https://arxiv.org/abs/2312.11792" target="_blank">AAAI'24</a>), etc.
@@ -150,7 +150,7 @@
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Probabilistic Optimality for Inference-time Scaling</h3> 
-		Youkang Wang*, <b>Jian Wang</b>*, Rubing Chen, Xiao-Yong Wei, and Qing Li.<br>
+		Youkang Wang, Jian Wang, Rubing Chen, Xiao-Yong Wei, and Qing Li.<br>
 		<i>arXiv:2506.22376, 2025</i> <br>
 		<a href="https://arxiv.org/abs/2506.22376">arXiv</a> | 
 		<a href="https://github.com/Albertwyk/OptScale">Github</a>
@@ -357,13 +357,19 @@
 		Research Postgraduate Student Innovation Award (Awarded by HKU)
 	</li>
 	<li>
-		Third Prize of 2021 Language and Intelligence Challenge (Awarded by CCF and CIPS)
+		Third Prize of 2021 Language and Intelligence Challenge (Awarded by CCF, CIPS, and Baidu)
+	</li>
+	<li>
+		Third Prize of Byte Cup 2018 IML Contest (Awarded by CAAI and ByteDance)
+	</li>
+	<li>
+		Bronze Medal of 2016 HUAWEI Code Craft (Awarded by Huawei)
 	</li>
 	<li>
 		AAAI 2020 Student Scholarship
 	</li>
 	<li>
-		National Scholarship of China
+		National Scholarship
 	</li>
 </p>
 </ul>
@@ -376,7 +382,7 @@
 </p>
 	<ul style="list-style-type:none">
 		<li>Area Chair: ACL Rolling Review (ARR), AACL (2025)</li>
-		<li>Program Committee Member: NeurIPS, ACL, EMNLP, AAAI, COLING</li>
+		<li>Program Committee Member: NeurIPS (2025-), ACL (2023-), EMNLP (2022-), AAAI (2026-), COLING (2020-)</li>
 		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM), ACM Transactions on Information Systems (TOIS) </li>
 	</ul>
 
@@ -436,7 +442,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2025 &copy; Jian Wang | Last updated: August 2025
+        <br> 2020-2025 &copy; Jian Wang | Last updated: Sept. 2025
 		</center>
 	</p>		
 </div>
